--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -1219,7 +1219,7 @@
         }
       },
       "id": "qkHK7f1zKM_k",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1232,7 +1232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "5a23046d-80b0-4f8d-a02f-4e3d833c0443",
       "metadata": {
         "id": "5a23046d-80b0-4f8d-a02f-4e3d833c0443",
@@ -1259,7 +1259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "9939c2d2-90fd-4e80-81bc-227c72e60e37",
       "metadata": {
         "id": "9939c2d2-90fd-4e80-81bc-227c72e60e37",
@@ -1286,7 +1286,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "aa287db8-057b-48d4-a6d8-18cc53eb7178",
       "metadata": {
         "id": "aa287db8-057b-48d4-a6d8-18cc53eb7178",
@@ -1314,7 +1314,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "da9ba926-0ab5-46e9-b66d-128088c3225b",
       "metadata": {
         "id": "da9ba926-0ab5-46e9-b66d-128088c3225b",
@@ -1385,7 +1385,7 @@
         }
       },
       "id": "tyE1qKlPQIoK",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1398,7 +1398,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "9d8e7311-81de-4da2-826c-c4dcad28ed9f",
       "metadata": {
         "id": "9d8e7311-81de-4da2-826c-c4dcad28ed9f",
@@ -1425,7 +1425,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "09e5121b-97b3-42e4-8025-f28f3470681b",
       "metadata": {
         "id": "09e5121b-97b3-42e4-8025-f28f3470681b",
@@ -1453,7 +1453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "b774b741-e9a6-45db-8f00-e6d9b734d03a",
       "metadata": {
         "id": "b774b741-e9a6-45db-8f00-e6d9b734d03a",
@@ -1480,7 +1480,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "5ce4fd2b-ab16-4b40-9ac2-d19c244d8d96",
       "metadata": {
         "id": "5ce4fd2b-ab16-4b40-9ac2-d19c244d8d96",
@@ -1506,7 +1506,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "5c04f880-6e96-4ef4-9f4b-df21aae76ff1",
       "metadata": {
         "id": "5c04f880-6e96-4ef4-9f4b-df21aae76ff1",
@@ -1535,7 +1535,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "d5192acc-27f3-456e-9c72-3b276a587bf5",
       "metadata": {
         "id": "d5192acc-27f3-456e-9c72-3b276a587bf5",
@@ -1565,7 +1565,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "43f0a340-9407-4302-af7e-4e63db578bbf",
       "metadata": {
         "id": "43f0a340-9407-4302-af7e-4e63db578bbf",
@@ -1596,7 +1596,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "46e96e29-2157-4b9f-bb24-0bd973eada9f",
       "metadata": {
         "id": "46e96e29-2157-4b9f-bb24-0bd973eada9f",
@@ -1627,7 +1627,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "d81a803b-fd80-403e-9ae3-680ef44a3d86",
       "metadata": {
         "id": "d81a803b-fd80-403e-9ae3-680ef44a3d86",
@@ -1653,7 +1653,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "7432174b-fe75-4371-b23a-e2c5d62edb15",
       "metadata": {
         "id": "7432174b-fe75-4371-b23a-e2c5d62edb15",
@@ -1681,7 +1681,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "000b3260-d91f-41f2-9729-4b0124f2c4d2",
       "metadata": {
         "id": "000b3260-d91f-41f2-9729-4b0124f2c4d2",
@@ -1709,7 +1709,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "c4b1a942-818e-42c1-b742-1fabe80fca6d",
       "metadata": {
         "id": "c4b1a942-818e-42c1-b742-1fabe80fca6d",
@@ -1737,7 +1737,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "a78f1070-3ff3-436a-8391-153f019f53cd",
       "metadata": {
         "id": "a78f1070-3ff3-436a-8391-153f019f53cd",
@@ -1769,7 +1769,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "id": "fcba0267-8cc4-4e89-9e78-2d820916c177",
       "metadata": {
         "id": "fcba0267-8cc4-4e89-9e78-2d820916c177",
@@ -1796,7 +1796,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "id": "d4c5fd77-9656-43e5-8fe2-be7dca23eb6d",
       "metadata": {
         "id": "d4c5fd77-9656-43e5-8fe2-be7dca23eb6d",
@@ -1836,122 +1836,323 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "id": "06a33fba-c6b1-4989-90f4-b647d1fe1627",
       "metadata": {
-        "id": "06a33fba-c6b1-4989-90f4-b647d1fe1627"
+        "id": "06a33fba-c6b1-4989-90f4-b647d1fe1627",
+        "outputId": "15cc511a-3c22-4c2f-d842-5cc3018367ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number:12\n",
+            "The square of 12.0 is: 144.0\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python function that returns the square of a number."
+        "# Write a Python function that returns the square of a number.\n",
+        "def square(number):\n",
+        "  return pow(number, 2)\n",
+        "\n",
+        "# Get input from the user and calculate the square\n",
+        "number = float(input(\"Enter a number:\")) # Moved outside the function\n",
+        "result = square(number) # Moved outside the function\n",
+        "\n",
+        "print(\"The square of\", number, \"is:\", result)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "id": "91d90a4a-7329-45db-893b-caed8450ba96",
       "metadata": {
-        "id": "91d90a4a-7329-45db-893b-caed8450ba96"
+        "id": "91d90a4a-7329-45db-893b-caed8450ba96",
+        "outputId": "e01a3052-48a6-45fa-9789-02bb232c7d0c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The sum of 12 and 4 is: 16\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python function that accepts two parameters and returns their sum."
+        "# Write a Python function that accepts two parameters and returns their sum.\n",
+        "def calculate_sum(num1, num2):\n",
+        "  return num1 + num2\n",
+        "number1 = 12\n",
+        "number2 = 4\n",
+        "result = calculate_sum(number1, number2)\n",
+        "print(\"The sum of\", number1, \"and\", number2, \"is:\", result)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "id": "dec2f9a5-90c5-478b-890b-0a506ecf45d3",
       "metadata": {
-        "id": "dec2f9a5-90c5-478b-890b-0a506ecf45d3"
+        "id": "dec2f9a5-90c5-478b-890b-0a506ecf45d3",
+        "outputId": "fc487bb1-6705-4de0-a821-948c7e4b14d8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "17 is a prime number.\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python function to check if a given number is prime."
+        "# Write a Python function to check if a given number is prime.\n",
+        "def is_prime(number):\n",
+        "\n",
+        "  if number <= 1:\n",
+        "    return False\n",
+        "  for i in range(2, int(number**0.5) + 1):\n",
+        "    if number % i == 0:\n",
+        "      return False\n",
+        "  return True\n",
+        "number_to_check = 17\n",
+        "if is_prime(number_to_check):\n",
+        "  print(f\"{number_to_check} is a prime number.\")\n",
+        "else:\n",
+        "  print(f\"{number_to_check} is not a prime number.\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "id": "56337441-68c3-45df-8733-a34cde0533a5",
       "metadata": {
-        "id": "56337441-68c3-45df-8733-a34cde0533a5"
+        "id": "56337441-68c3-45df-8733-a34cde0533a5",
+        "outputId": "1cf26c69-93d5-4bcd-870b-e91609913f11",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The factorial of 5 is: 120\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python function to calculate the factorial of a number using recursion."
+        "# Write a Python function to calculate the factorial of a number using recursion.\n",
+        "def factorial(n):\n",
+        "  if n == 0:\n",
+        "    return 1\n",
+        "  else:\n",
+        "    return n * factorial(n - 1)\n",
+        "number = 5\n",
+        "result = factorial(number)\n",
+        "print(f\"The factorial of {number} is: {result}\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 45,
       "id": "84a2d010-e7b2-409b-b1f4-99bf806bb77a",
       "metadata": {
-        "id": "84a2d010-e7b2-409b-b1f4-99bf806bb77a"
+        "id": "84a2d010-e7b2-409b-b1f4-99bf806bb77a",
+        "outputId": "34679541-acbd-4d93-a5e3-c079927825f0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2 raised to the power of 3 is: 8\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python function to calculate the power of a number using recursion."
+        "# Write a Python function to calculate the power of a number using recursion.\n",
+        "def power(base, exponent):\n",
+        "  if exponent == 0:\n",
+        "    return 1\n",
+        "  else:\n",
+        "    return base * power(base, exponent - 1)\n",
+        "\n",
+        "base = 2\n",
+        "exponent = 3\n",
+        "result = power(base, exponent)\n",
+        "print(f\"{base} raised to the power of {exponent} is: {result}\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 46,
       "id": "ec44911e-7820-46cc-96a3-4ca443888837",
       "metadata": {
-        "id": "ec44911e-7820-46cc-96a3-4ca443888837"
+        "id": "ec44911e-7820-46cc-96a3-4ca443888837",
+        "outputId": "742edb75-595f-4072-e6af-bd4e321dc441",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The length of the list is: 5\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python function to accept a list and return its length without using the built-in len() function."
+        "# Write a Python function to accept a list and return its length without using the built-in len() function.\n",
+        "def list_length(input_list):\n",
+        "  count = 0\n",
+        "  for _ in input_list:\n",
+        "    count += 1\n",
+        "  return count\n",
+        "\n",
+        "my_list = [1, 2, 3, 4, 5]\n",
+        "length = list_length(my_list)\n",
+        "print(\"The length of the list is:\", length)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 48,
       "id": "fb4c08e1-34f3-487a-a1c6-77cd60fb4836",
       "metadata": {
-        "id": "fb4c08e1-34f3-487a-a1c6-77cd60fb4836"
+        "id": "fb4c08e1-34f3-487a-a1c6-77cd60fb4836",
+        "outputId": "7140bfdc-bcff-4f1f-d85c-8267cde0d7a0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Sum of positional arguments: 6\n",
+            "Sum of positional arguments: 30\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python function that accepts both positional and keyword arguments and prints the sum of positional arguments."
+        "# Write a Python function that accepts both positional and keyword arguments and prints the sum of positional arguments.\n",
+        "def sum_positional_args(*args, **kwargs):\n",
+        "  positional_sum = sum(args)\n",
+        "  print(\"Sum of positional arguments:\", positional_sum)\n",
+        "sum_positional_args(1, 2, 3, a=4, b=5)\n",
+        "sum_positional_args(10, 20, name=\"Alice\", age=30)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 49,
       "id": "f4ffc7a8-f579-461c-b507-4085a0477283",
       "metadata": {
-        "id": "f4ffc7a8-f579-461c-b507-4085a0477283"
+        "id": "f4ffc7a8-f579-461c-b507-4085a0477283",
+        "outputId": "92568bb7-ef8f-4cc0-bf87-68de70fce755",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The maximum number is: 10\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python function to find the maximum of two numbers using keyword arguments."
+        "# Write a Python function to find the maximum of two numbers using keyword arguments.\n",
+        "def find_max(num1, num2):\n",
+        "  return max(num1, num2)\n",
+        "result = find_max(num2=10, num1=5)\n",
+        "print(\"The maximum number is:\", result)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "id": "0b00c4af-89e0-43e8-a991-1b684d2ce33f",
       "metadata": {
-        "id": "0b00c4af-89e0-43e8-a991-1b684d2ce33f"
+        "id": "0b00c4af-89e0-43e8-a991-1b684d2ce33f",
+        "outputId": "90aeb6f9-af2b-4d2a-8134-a1a720ea91f0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The product of the numbers is: 120\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python function that accepts a list of numbers and returns their product."
+        "# Write a Python function that accepts a list of numbers and returns their product.\n",
+        "def calculate_product(numbers):\n",
+        "  product = 1\n",
+        "  for num in numbers:\n",
+        "    product *= num\n",
+        "  return product\n",
+        "number_list = [2, 3, 4, 5]\n",
+        "result = calculate_product(number_list)\n",
+        "print(\"The product of the numbers is:\", result)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "id": "9cd11703-5b48-44fe-af4e-ea906a2762c9",
       "metadata": {
-        "id": "9cd11703-5b48-44fe-af4e-ea906a2762c9"
+        "id": "9cd11703-5b48-44fe-af4e-ea906a2762c9",
+        "outputId": "c09833e6-3fe6-40b3-9929-da7d3c083021",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The number is even or odd using the modulo operator is: odd\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python function to check if a number is even or odd using the modulo operator."
+        "# Write a Python function to check if a number is even or odd using the modulo operator.\n",
+        "def check_even_odd(number):\n",
+        "  if number % 2 == 0:\n",
+        "    return \"even\"\n",
+        "  else:\n",
+        "    return \"odd\"\n",
+        "number_to_check = 7\n",
+        "result = check_even_odd(number_to_check)\n",
+        "print(\"The number is even or odd using the modulo operator is:\", result)"
       ]
     },
     {
@@ -1963,7 +2164,7 @@
       },
       "outputs": [],
       "source": [
-        "# Write a Python program to create a list of squares of numbers from 1 to 10 using list comprehension."
+        "# Write a Python program to create a list of squares of numbers from 1 to 10 using list comprehension.\n"
       ]
     },
     {
@@ -2107,7 +2308,7 @@
       },
       "outputs": [],
       "source": [
-        "# Write a Python program to remove all occurrences of a specific element from a list."
+        "# Write a Python program to remove all occurrences of a specific element from a list.\n"
       ]
     },
     {
