--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -1836,7 +1836,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "id": "06a33fba-c6b1-4989-90f4-b647d1fe1627",
       "metadata": {
         "id": "06a33fba-c6b1-4989-90f4-b647d1fe1627",
@@ -1869,7 +1869,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "id": "91d90a4a-7329-45db-893b-caed8450ba96",
       "metadata": {
         "id": "91d90a4a-7329-45db-893b-caed8450ba96",
@@ -1899,7 +1899,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "id": "dec2f9a5-90c5-478b-890b-0a506ecf45d3",
       "metadata": {
         "id": "dec2f9a5-90c5-478b-890b-0a506ecf45d3",
@@ -1936,7 +1936,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "id": "56337441-68c3-45df-8733-a34cde0533a5",
       "metadata": {
         "id": "56337441-68c3-45df-8733-a34cde0533a5",
@@ -1968,7 +1968,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "id": "84a2d010-e7b2-409b-b1f4-99bf806bb77a",
       "metadata": {
         "id": "84a2d010-e7b2-409b-b1f4-99bf806bb77a",
@@ -2002,7 +2002,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "id": "ec44911e-7820-46cc-96a3-4ca443888837",
       "metadata": {
         "id": "ec44911e-7820-46cc-96a3-4ca443888837",
@@ -2035,7 +2035,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "id": "fb4c08e1-34f3-487a-a1c6-77cd60fb4836",
       "metadata": {
         "id": "fb4c08e1-34f3-487a-a1c6-77cd60fb4836",
@@ -2065,7 +2065,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "id": "f4ffc7a8-f579-461c-b507-4085a0477283",
       "metadata": {
         "id": "f4ffc7a8-f579-461c-b507-4085a0477283",
@@ -2093,7 +2093,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "id": "0b00c4af-89e0-43e8-a991-1b684d2ce33f",
       "metadata": {
         "id": "0b00c4af-89e0-43e8-a991-1b684d2ce33f",
@@ -2125,7 +2125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "id": "9cd11703-5b48-44fe-af4e-ea906a2762c9",
       "metadata": {
         "id": "9cd11703-5b48-44fe-af4e-ea906a2762c9",
@@ -2157,158 +2157,361 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "afbf262e-daed-40a9-827f-82fa60979610",
       "metadata": {
-        "id": "afbf262e-daed-40a9-827f-82fa60979610"
+        "id": "afbf262e-daed-40a9-827f-82fa60979610",
+        "outputId": "e5526ec4-ff19-41ab-ddc6-d6cbcce2887f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to create a list of squares of numbers from 1 to 10 using list comprehension.\n"
+        "# Write a Python program to create a list of squares of numbers from 1 to 10 using list comprehension.\n",
+        "squares = [i**2 for i in range(1, 11)]\n",
+        "print(squares)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "7fff76d8-9ba8-4006-9be6-6f7350092d1c",
       "metadata": {
-        "id": "7fff76d8-9ba8-4006-9be6-6f7350092d1c"
+        "id": "7fff76d8-9ba8-4006-9be6-6f7350092d1c",
+        "outputId": "67f98a92-59d4-495d-eec1-a4c8418267b2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 4, 6, 8, 10]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to filter out all even numbers from a list using list comprehension."
+        "# Write a Python program to filter out all even numbers from a list using list comprehension.\n",
+        "numbers = [1, 2, 3, 4, 5, 5, 6, 7, 8, 9, 10]\n",
+        "even_numbers = [num for num in numbers if num % 2 == 0]\n",
+        "print(even_numbers)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "6ae9b8df-38f9-4fd7-bad1-aa7b07cc9271",
       "metadata": {
-        "id": "6ae9b8df-38f9-4fd7-bad1-aa7b07cc9271"
+        "id": "6ae9b8df-38f9-4fd7-bad1-aa7b07cc9271",
+        "outputId": "7e3c5236-edbc-4a2f-9457-0d5c140a061c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['apple', 'banana', 'cherry', 'elderberry']\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to create a list of strings that are longer than 4 characters from a given list of words using list comprehension."
+        "# Write a Python program to create a list of strings that are longer than 4 characters from a given list of words using list comprehension.\n",
+        "words = [\"apple\", \"banana\", \"cherry\", \"date\", \"elderberry\"]\n",
+        "long_words = [word for word in words if len(word) > 4]\n",
+        "print(long_words)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "f492c7d4-6ad3-48ab-9b61-232be02aecee",
       "metadata": {
-        "id": "f492c7d4-6ad3-48ab-9b61-232be02aecee"
+        "id": "f492c7d4-6ad3-48ab-9b61-232be02aecee",
+        "outputId": "80cac39c-7ee7-4134-a0f1-a3bd7132125d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['N', 'A', 'V', 'Y', 'A']\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to create a list of all uppercase letters in a string using list comprehension."
+        "# Write a Python program to create a list of all uppercase letters in a string using list comprehension.\n",
+        "string = \"navya\"\n",
+        "uppercase_letters = [char.upper() for char in string]\n",
+        "print(uppercase_letters)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "929a7f74-1762-4a2a-be23-bacf67ff4d8b",
       "metadata": {
-        "id": "929a7f74-1762-4a2a-be23-bacf67ff4d8b"
+        "id": "929a7f74-1762-4a2a-be23-bacf67ff4d8b",
+        "outputId": "14ffd9c4-1d58-4737-ee84-19a39acd7efb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to generate the first n Fibonacci numbers using list comprehension."
+        "# Write a Python program to generate the first n Fibonacci numbers using list comprehension.\n",
+        "def generate_fibonacci(n):\n",
+        "  fibonacci_numbers = [0, 1]\n",
+        "  [fibonacci_numbers.append(fibonacci_numbers[-1] + fibonacci_numbers[-2]) for _ in range(2, n)]\n",
+        "  return fibonacci_numbers\n",
+        "n = 10\n",
+        "result = generate_fibonacci(n)\n",
+        "print(result)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "47188bbc-cf62-47bb-a14e-0582c8b5cdd9",
       "metadata": {
-        "id": "47188bbc-cf62-47bb-a14e-0582c8b5cdd9"
+        "id": "47188bbc-cf62-47bb-a14e-0582c8b5cdd9",
+        "outputId": "eea8386a-8b3f-4f00-e712-86780267fdaa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1: 1, 2: 4, 3: 9, 4: 16, 5: 25}\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to create a dictionary where keys are numbers and values are their squares using dictionary comprehension."
+        "# Write a Python program to create a dictionary where keys are numbers and values are their squares using dictionary comprehension.\n",
+        "numbers = range(1, 6)\n",
+        "squares_dict = {num: num**2 for num in numbers}\n",
+        "print(squares_dict)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "3c4637d3-aa85-4b4c-acf3-953c10818bcb",
       "metadata": {
-        "id": "3c4637d3-aa85-4b4c-acf3-953c10818bcb"
+        "id": "3c4637d3-aa85-4b4c-acf3-953c10818bcb",
+        "outputId": "ce6238ea-9410-49e2-b71f-3d9c018875fd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'a': 1, 'b': 2, 'c': 3}\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to create a dictionary from two lists (one for keys and one for values) using dictionary comprehension."
+        "# Write a Python program to create a dictionary from two lists (one for keys and one for values) using dictionary comprehension.\n",
+        "keys = ['a', 'b', 'c']\n",
+        "values = [1, 2, 3]\n",
+        "my_dict = {key: value for key, value in zip(keys, values)}\n",
+        "print(my_dict)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "de817d6f-96e7-4346-839e-1ef0df539b6b",
       "metadata": {
-        "id": "de817d6f-96e7-4346-839e-1ef0df539b6b"
+        "id": "de817d6f-96e7-4346-839e-1ef0df539b6b",
+        "outputId": "b37b6a47-18fe-418c-d9e9-24edf88f40ab",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1: 1, 2: 8, 3: 27, 4: 64, 5: 125}\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to create a dictionary of numbers from 1 to 5 and their cubes using dictionary comprehension."
+        "# Write a Python program to create a dictionary of numbers from 1 to 5 and their cubes using dictionary comprehension.\n",
+        "numbers = range(1, 6)\n",
+        "cubes_dict = {num: num**3 for num in numbers}\n",
+        "print(cubes_dict)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "33695301-057e-49a6-9f80-a2f4e3af60ed",
       "metadata": {
-        "id": "33695301-057e-49a6-9f80-a2f4e3af60ed"
+        "id": "33695301-057e-49a6-9f80-a2f4e3af60ed",
+        "outputId": "17353fc0-1103-45d8-8562-a3f0ccb9a6a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 4, 9, 16, 25]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to square each element of a list using the map() function."
+        "# Write a Python program to square each element of a list using the map() function.\n",
+        "def square(x):\n",
+        "  return x ** 2\n",
+        "numbers = [1, 2, 3, 4, 5]\n",
+        "squared_numbers = list(map(square, numbers))\n",
+        "print(squared_numbers)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "6d4d17f3-c40f-4944-8656-c6416b600361",
       "metadata": {
-        "id": "6d4d17f3-c40f-4944-8656-c6416b600361"
+        "id": "6d4d17f3-c40f-4944-8656-c6416b600361",
+        "outputId": "03f6d437-1a45-421f-83d5-87ae9e56cc85",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 4, 6, 8, 10]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to filter all even numbers from a list using the filter() function."
+        "# Write a Python program to filter all even numbers from a list using the filter() function.\n",
+        "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+        "even_numbers = list(filter(lambda x: x % 2 == 0, numbers))\n",
+        "print(even_numbers)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "6634ba1f-9f81-475e-b7c4-422d102afb75",
       "metadata": {
-        "id": "6634ba1f-9f81-475e-b7c4-422d102afb75"
+        "id": "6634ba1f-9f81-475e-b7c4-422d102afb75",
+        "outputId": "e9292c9a-51b3-46f7-9dcf-acb547f25c4f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to use a lambda function to check if a number is divisible by both 3 and 5."
+        "# Write a Python program to use a lambda function to check if a number is divisible by both 3 and 5.\n",
+        "is_divisible_by_3_and_5 = lambda x: x % 3 == 0 and x % 5 == 0\n",
+        "number = 15\n",
+        "result = is_divisible_by_3_and_5(number)\n",
+        "print(result)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "0aac8430-5d77-439d-9a99-9598fadf989c",
       "metadata": {
-        "id": "0aac8430-5d77-439d-9a99-9598fadf989c"
+        "id": "0aac8430-5d77-439d-9a99-9598fadf989c",
+        "outputId": "1f74c8a9-f2c2-4524-c262-134c04dc7ffe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 4, 6, 8, 10]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to multiply all numbers in a list by 2 using a lambda function inside map()."
+        "# Write a Python program to multiply all numbers in a list by 2 using a lambda function inside map().\n",
+        "numbers = [1, 2, 3, 4, 5]\n",
+        "multiplied_numbers = list(map(lambda x:x * 2, numbers))\n",
+        "print(multiplied_numbers)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "id": "e4cd5ba8-c6ec-4f0d-8787-bf0a4b7a2e22",
       "metadata": {
-        "id": "e4cd5ba8-c6ec-4f0d-8787-bf0a4b7a2e22"
+        "id": "e4cd5ba8-c6ec-4f0d-8787-bf0a4b7a2e22",
+        "outputId": "90ae4282-8c79-4341-9ff8-7fe605fbd593",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 3, 4, 5]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to remove all occurrences of a specific element from a list.\n"
+        "# Write a Python program to remove all occurrences of a specific element from a list.\n",
+        "my_list = [1, 2, 3, 4, 2, 5, 2]\n",
+        "element_to_remove = 2\n",
+        "my_list = [x for x in my_list if x != element_to_remove]\n",
+        "print(my_list)"
       ]
     },
     {
